zwave/usa/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zwave
spec:
  selector:
    matchLabels:
      name: zwave-usa
  template:
    metadata:
      labels:
        name: zwave-usa
    spec:
      containers:
      - name: zwave-usa
      nodeSelector:
        kubernetes.io/hostname: stick3
